--- a/styles/styles.css
+++ b/styles/styles.css
@@ -76,6 +76,8 @@ ul {
 /* site-nav */
 
 .site-nav {
+  position: relative;
+
   display: flex;
   margin-left: 93px;
 }
@@ -88,6 +90,7 @@ ul {
   margin-left: 50px;
 }
 .site-nav .link {
+  position: relative;
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -96,10 +99,26 @@ ul {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: var(--accent-color);
+}
+
+.site-nav .is-active::after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
 }
 
 /* addresses */
@@ -117,6 +136,8 @@ ul {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .addresses .link:hover,
 .addresses .link:focus {
@@ -134,11 +155,14 @@ ul {
 .icon-phone {
   fill: currentColor;
   margin-right: 10px;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .addresses .link:hover .icon-mail,
 .addresses .link:hover .icon-phone {
   fill: var(--accent-color);
 }
+
 .header {
   border-bottom: 1px solid #ececec;
 }
@@ -386,18 +410,25 @@ ul {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .button.primary {
   color: var(--white);
   background-color: var(--accent-color);
+  border: none;
 
   padding: 10px 32px;
   border-radius: 4px;
   min-width: 200px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button.primary:hover {
+.button.primary:hover,
+.button.primary:focus {
   color: var(--accent-color);
   background-color: var(--white);
   cursor: pointer;
