--- a/styles/styles.css
+++ b/styles/styles.css
@@ -159,7 +159,9 @@ ul {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .addresses .link:hover .icon-mail,
-.addresses .link:hover .icon-phone {
+.addresses .link:hover .icon-phone,
+.addresses .link:focus .icon-mail,
+.addresses .link:focus .icon-phone {
   fill: var(--accent-color);
 }
 
@@ -208,6 +210,61 @@ ul {
   background-color: var(--bg-color-primary);
 }
 
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(1.1);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  min-width: 528px;
+  min-height: 581px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  background-color: #fff;
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  cursor: pointer;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+  padding: 6px;
+  background-color: #fff;
+}
+
+.modal-close .icon {
+  width: 18px;
+  height: 18px;
+}
 .section {
   padding: 94px 0;
   /* outline: 1px solid red; */
@@ -297,6 +354,39 @@ ul {
   margin-left: 30px;
 }
 
+.img-thumb {
+  position: relative;
+}
+.img-thumb .works-description {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+
+  width: 100%;
+  height: 70px;
+  padding-top: 27px;
+
+  color: var(--white);
+  background-color: rgba(47, 48, 58, 0.8);
+  text-align: center;
+  font-weight: 700;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+/* .img-thumb::after {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+} */
+
 /* Team */
 
 .team {
@@ -354,6 +444,8 @@ ul {
   height: 44px;
   padding: 12px;
   border-radius: 50%;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-contacts li + li {
   margin-left: 10px;
@@ -363,7 +455,10 @@ ul {
   width: 20px;
   height: 20px;
   fill: #afb1b8;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .icon-bg:hover,
 .icon-bg:focus {
   background-color: var(--accent-color);
@@ -385,6 +480,8 @@ ul {
   padding: 16px 32px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients li + li {
   margin-left: 30px;
@@ -393,6 +490,8 @@ ul {
   width: 106px;
   height: 60px;
   fill: #afb1b8;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .item-client:hover .icon,
 .item-client:focus .icon {
@@ -498,6 +597,8 @@ ul {
   padding: 12px;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-contacts li + li {
   margin-left: 10px;
@@ -542,6 +643,9 @@ ul {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .filters .button:hover,
 .filters .button:focus {
@@ -560,7 +664,8 @@ ul {
   margin-right: 30px;
   margin-bottom: 30px;
 }
-.works-list > .item:hover {
+.works-list > .item:hover,
+.works-list > .item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -592,7 +697,7 @@ ul {
   line-height: 1.87;
 }
 
-.works-list > .item > img {
+.works-list > .item img {
   display: block;
 }
 
@@ -608,4 +713,33 @@ ul {
 }
 .works-list > .item .title {
   margin-bottom: 4px;
+}
+
+.item-thumb {
+  position: relative;
+  overflow: hidden;
+}
+.item-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  background: rgba(33, 150, 243, 0.9);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), s;
+}
+
+.works-list > .item:hover .item-overlay,
+.works-list > .item:focus .item-overlay {
+  transform: translateY(0);
+}
+
+.overlay-description {
+  padding: 63px 24px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: #ffffff;
 }
