--- a/styles/styles.css
+++ b/styles/styles.css
@@ -258,7 +258,13 @@ ul {
   width: 32px;
   height: 32px;
   padding: 6px;
-  background-color: #fff;
+  background-color: var(--white);
+}
+
+.modal-close:hover,
+.modal-close:focus {
+  background-color: rgba(0, 0, 0, 0.1);
+  border: 1px solid var(--white);
 }
 
 .modal-close .icon {
@@ -560,6 +566,12 @@ ul {
 }
 .contacts .link {
   color: rgba(255, 255, 255, 0.6);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts .link:hover,
+.contacts .link:focus {
+  color: var(--white);
 }
 .contacts .item + .item {
   margin-top: 9px;
@@ -679,7 +691,8 @@ ul {
   display: block;
 }
 
-.works-list a {
+.works-list .item-link {
+  display: block;
   text-decoration: none;
 }
 .works-list .title {
@@ -730,8 +743,8 @@ ul {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), s;
 }
 
-.works-list > .item:hover .item-overlay,
-.works-list > .item:focus .item-overlay {
+.works-list .item-link:hover .item-overlay,
+.works-list .item-link:focus .item-overlay {
   transform: translateY(0);
 }
 
