--- a/styles/styles.css
+++ b/styles/styles.css
@@ -259,6 +259,9 @@ ul {
   height: 32px;
   padding: 6px;
   background-color: var(--white);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close:hover,
