изменяет цвет приховере на ссылку в футере

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -574,7 +574,7 @@ ul {
 
 .contacts .link:hover,
 .contacts .link:focus {
-  color: var(--white);
+  color: var(--accent-color);
 }
 .contacts .item + .item {
   margin-top: 9px;
