--- a/styles/styles.css
+++ b/styles/styles.css
@@ -679,8 +679,8 @@ ul {
   margin-right: 30px;
   margin-bottom: 30px;
 }
-.works-list > .item:hover,
-.works-list > .item:focus {
+.works-list .item-link:hover,
+.works-list .item-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
